@@ -29,6 +29,7 @@
  * QuantileMatchingFactory probabilities argument is no longer optional
  * Add a new moment order argument to MethodOfMomentsFactory
  * Removed Drawable.getPointCode
+ * Deprecated LHS in favor of ProbabilitySimulationAlgorithm+LHSExperiment
 
 === Documentation ===
 
